--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 
               <p class="social-text">Atau Masuk dengan Sosial Media</p>
               <div class="social-media">
-                 <a href="#" class="social-icon">
+                <a href="https://web.facebook.com/" class="social-icon">
                     <i class="fab fa-facebook-f"></i>
-                 </a>
-                 <a href="#" class="social-icon">
+                </a>
+                <a href="https://twitter.com/" class="social-icon">
                     <i class="fab fa-twitter"></i>
-                 </a>
-                 <a href="#" class="social-icon">
+                </a>
+                <a href="https://mail.google.com/" class="social-icon">
                     <i class="fab fa-google"></i>
-                 </a>
-                 <a href="#" class="social-icon">
+                </a>
+                <a href="https://www.instagram.com/" class="social-icon">
                     <i class="fab fa-instagram"></i>
-                 </a>
+                </a>
               </div>
             </form>
 
@@ -69,16 +69,16 @@
 
               <p class="social-text">Atau Daftar dengan Sosial Media  </p>
               <div class="social-media">
-                <a href="#" class="social-icon">
+                <a href="https://web.facebook.com/" class="social-icon">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://twitter.com/" class="social-icon">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://mail.google.com/" class="social-icon">
                     <i class="fab fa-google"></i>
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://www.instagram.com/" class="social-icon">
                     <i class="fab fa-instagram"></i>
                 </a>
               </div>
